# NumCpp

./: .gitignore  CMakeLists.txt  README.md  TODO.md  examples.cpp
NumCpp/: Complex.hpp  Constants.hpp  FFT.hpp  FileHandling.hpp  Functions.hpp  Linalg.hpp  MathOps.hpp  NumCpp.hpp  Random.hpp  ReadFile.hpp
NumCpp/Core/: Matrix.hpp  NArray.hpp  Shape.hpp  VecOps.hpp  array_creation.hpp
NumCpp/Utils/: Copy.hpp  Errors.hpp  FuncUtils.hpp  LinalgUtils.hpp  MathFuncUtils.hpp  MathOps.hpp  StringOps.hpp  VecOps.hpp
NumCpp/utils/: Shape.hpp  operations.hpp
NumXX/: Complex.hpp  Constants.hpp  FFT.hpp  FileHandling.hpp  Functions.hpp  Linalg.hpp  MathOps.hpp  Misc.hpp  NumXX.hpp  Random.hpp  VecOps.hpp
NumXX/Core/: Matrix.hpp  NArray.hpp  Shape.hpp  VecOps.hpp  array_creation.hpp
NumXX/Utils/: Errors.hpp  FuncUtils.hpp  LinalgUtils.hpp  MathFuncUtils.hpp  StringOps.hpp  VecOps.hpp
TODO/: Cache.cpp  TODO.md
